fix: font-awesomeのライブラリの依存関係を修正

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
+  font_awesome_flutter: '>= 4.7.0'
+
+  google_fonts: ^2.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
