--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  firebase_analytics: ^8.3.4
   cupertino_icons: ^1.0.2
   firebase_core: ^1.10.0
+  cloud_firestore: ^3.1.0
 
 dev_dependencies:
   flutter_test:
